tests/specs/export_declaration_merged_namespace.txt
# mod.ts
namespace Namespace1 {
  export class Test1 {}
}
namespace Namespace1 {
  export class Test2 {}
}

export { Namespace1 };

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | namespace Namespace1 {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:3
  | 
2 |   export class Test1 {}
  |   ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:5:3
  | 
5 |   export class Test2 {}
  |   ^

# output.txt
Defined in file:///mod.ts:0:1

namespace Namespace1

  class Test1
  class Test2


# output.json
{
  "symbols": [
    {
      "name": "Namespace1",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "namespace",
          "def": {
            "elements": [
              {
                "name": "Test1",
                "declarations": [
                  {
                    "location": {
                      "filename": "file:///mod.ts",
                      "line": 1,
                      "col": 2,
                      "byteIndex": 25
                    },
                    "declarationKind": "export",
                    "kind": "class",
                    "def": {}
                  }
                ]
              },
              {
                "name": "Test2",
                "declarations": [
                  {
                    "location": {
                      "filename": "file:///mod.ts",
                      "line": 4,
                      "col": 2,
                      "byteIndex": 74
                    },
                    "declarationKind": "export",
                    "kind": "class",
                    "def": {}
                  }
                ]
              }
            ]
          }
        }
      ]
    }
  ]
}
